re PR rtl-optimization/28386 (Wrong code with if condition in loop)

PR rtl-optimization/28386
	* loop.c (biased_biv_may_wrap_p): Rename to biv_may_wrap_p and
	remove 'bias' parameter.
	(maybe_eliminate_biv_1): Adjust for above change.

From-SVN: r116693